feat(ai): add prompt variants quality gates metrics and offline regression tests